Fix dark mode colours

--- a/conspiracy-spectrums/src/style.css
+++ b/conspiracy-spectrums/src/style.css
@@ -78,7 +78,7 @@ p {
 }
 
 h1, h2, h3 {
-  color: var(--fg-strong);
+  color: var(--fg);
   font-weight: 700;
 }
 
@@ -159,7 +159,7 @@ a {
 }
 
 .rounded-box {
-  border: dotted 2pt black;
+  border: dotted 2pt var(--fg);
   border-radius: 1em;
   padding: 1.5em;
   margin: 1em 0;
@@ -376,22 +376,17 @@ input[type=range]::-webkit-slider-runnable-track {
   border-radius: 2em;
 }
 input[type=range]::-webkit-slider-thumb {
-  border: solid 1pt var(--fg);
-  height: 3.5em;
-  width: 3.5em;
-  border-radius: 2em;
   background-color: #f5f5f5;
-  border: solid 2pt #303030;
-  -webkit-appearance: none;
-  margin-top: -1.75em;
-}
-input[type=range]::-webkit-slider-thumb {
   background-image: none; 
+  background-position: center;
   background-repeat: no-repeat;
   background-size: 1.3em;
-  background-position: center;
-  background-color: #f5f5f5;
-  border: solid 2pt #303030;
+  border-radius: 2em;
+  border: solid 2pt var(--fg-strong);
+  height: 3.5em;
+  margin-top: -1.75em;
+  -webkit-appearance: none;
+  width: 3.5em;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
   background-color: var(--bg);
@@ -406,7 +401,7 @@ input[type=range]::-moz-range-thumb {
   height: 2em;
   width: 2em;
   border-radius: 2em;
-  background-color: #f5f5f5;
+  background-color: var(--bg);
 }
 input[type=range]::-ms-track {
   width: 100%;
@@ -431,7 +426,7 @@ input[type=range]::-ms-thumb {
   height: 2em;
   width: 2em;
   border-radius: 2em;
-  background-color: #f5f5f5;
+  background-color: var(--bg);
 }
 input[type=range]:focus::-ms-fill-lower {
   background-color: var(--fg);
@@ -455,7 +450,7 @@ input:disabled {
 
 .confidence-2 input[type=range]::-webkit-slider-thumb {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3C!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M142.9 96c-21.5 0-42.2 8.5-57.4 23.8L54.6 150.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L40.2 74.5C67.5 47.3 104.4 32 142.9 32C223 32 288 97 288 177.1c0 38.5-15.3 75.4-42.5 102.6L109.3 416H288c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-12.9 0-24.6-7.8-29.6-19.8s-2.2-25.7 6.9-34.9L200.2 234.5c15.2-15.2 23.8-35.9 23.8-57.4c0-44.8-36.3-81.1-81.1-81.1z'/%3E%3C/svg%3E");
-  background-size: 0.7em;
+  background-size: 0.75em;
 }
 
 .confidence-3 input[type=range]::-webkit-slider-thumb {
@@ -465,7 +460,7 @@ input:disabled {
 
 .confidence-4 input[type=range]::-webkit-slider-thumb {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3C!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d='M189 77.6c7.5-16 .7-35.1-15.3-42.6s-35.1-.7-42.6 15.3L3 322.4c-4.7 9.9-3.9 21.5 1.9 30.8S21 368 32 368H256v80c0 17.7 14.3 32 32 32s32-14.3 32-32V368h32c17.7 0 32-14.3 32-32s-14.3-32-32-32H320V160c0-17.7-14.3-32-32-32s-32 14.3-32 32V304H82.4L189 77.6z'/%3E%3C/svg%3E");
-  background-size: 0.75em;
+  background-size: 0.8em;
 }
 
 .confidence-5 input[type=range]::-webkit-slider-thumb {
